# fastapi-htmx-template

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  tailwind.config.js
app/: database.py  main.py  models.py
static/: index.html
templates/: data.html  form.html  index.html
