[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Rafael Dias", email = "s.rafaeldias@protonmail.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0.post1",
    "Jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

